# bandwagon

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
notebooks/: 01_fairall9_photometry.ipynb
src/bandwagon/: __init__.py  photometry.py  redshift.py  spectra.py  xmatch.py
src/bandwagon/providers/: __init__.py  desi.py  lamost.py  mast.py  sdss.py  sixdfgs.py
tests/: test_photometry.py  test_redshift.py  test_spectra.py  test_xmatch.py
tests/providers/: test_desi.py  test_lamost.py  test_mast.py  test_sdss.py  test_sixdfgs.py
